<resources>
    <string name="app_name">ZKMusic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">皮皮虾出击</string>
    <string name="nav_header_subtitle">1272447726@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_add">新建歌单</string>

    <string name="menu_home">首页</string>
    <string name="menu_home_music">ZK音乐</string>
    <string name="menu_home_find">发现</string>

    <string name="menu_theme">主题设置</string>
    <string name="menu_update_version">版本更新</string>
    <string name="menu_local_song">扫描本地歌曲</string>
    <string name="menu_login_out">退出登录</string>
    <!--搜索页面的string-->
    <string name="search_hint">搜索音乐、MV、歌单、用户</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clean">清空历史</string>
    <string name="search_song_more">更多版本</string>
    <string name="search_song_more_back">收起更多版本</string>
    <!--扫描歌曲页面的string-->
    <string name="scan_song_btn">扫描歌曲</string>
    <string name="scan_song_text_view">一键扫描手机内的歌曲文件</string>
    <!--歌曲弹出框页面的string-->
    <string name="pop_next_song_btn">下一首播放</string>
    <string name="pop_play_song_btn">播放歌曲</string>
    <string name="pop_delete_song_btn">删除歌曲</string>
    <string name="pop_like_song_btn">收藏歌曲</string>
    <string name="pop_dislike_song_btn">取消收藏</string>
    <string name="pop_download_song_btn">下载歌曲</string>
    <string name="pop_share_song_btn">分享歌曲</string>
    <string name="pop_share_song_add">添加至我的歌单</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_song">为你推荐歌曲</string>
    <string name="recommend_playlist">为你推荐歌单</string>

    <!--分享页面的string-->
    <string name="pop_share">分享到</string>
    <string name="pop_share_qq">qq好友</string>
    <string name="pop_share_qqzoom">qq空间</string>
    <string name="pop_share_vx">微信好友</string>
    <string name="pop_share_vx_friend">朋友圈</string>
    <string name="pop_share_xinlang">新浪微博</string>
    <string name="pop_share_douyin">抖音</string>
    <string name="pop_share_zhihu">知乎</string>
    <string name="pop_share_tieba">百度贴吧</string>
    <string name="play_close">关闭</string>
    <!--播放音乐的string-->

    <!--提示框页面的string-->
    <string name="dialog_tips">提示</string>
    <string name="dialog_remove_play_songs">确定清空所有歌曲吗？</string>
    <string name="dialog_del_failed">无法删除当前正在听的歌曲</string>
    <string name="dialog_yes">确定</string>
    <string name="dialog_no">取消</string>

    <!--歌曲播放列表弹出框页面的string-->
    <string name="single_loop">单曲循坏</string>
    <string name="play_order">顺序播放</string>
    <string name="play_random">随机播放</string>
    <string name="play_divide"> - </string>

    <!--新建歌单页面的string-->
    <string name="add_playlist_title">输入歌单名</string>
    <string name="add_playlist_intro">输入简介</string>
    <string name="add_playlist_pic">图片url</string>

    <!--添加歌曲至歌单页面的string-->
    <string name="pop_add">添加到</string>
    <string name="pop_add_close">取消</string>
</resources>
