<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_border">
    <Button
        android:id="@+id/pop_play_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/normal_font"
        android:text="@string/pop_play_song_btn"
        android:textColor="@color/colorWhite"
        android:background="?attr/colorPrimary"
        />
    <Button
        android:id="@+id/pop_next_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/normal_font"
        android:text="@string/pop_next_song_btn"
        android:textColor="@color/colorWhite"
        android:background="?attr/colorPrimary"
        />
    <Button
        android:id="@+id/pop_like_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:text="@string/pop_like_song_btn"
        android:textSize="@dimen/normal_font"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/pop_download_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:text="@string/pop_download_song_btn"
        android:textSize="@dimen/normal_font"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/pop_share_add_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:text="@string/pop_share_song_add"
        android:textSize="@dimen/normal_font"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/pop_share_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:text="@string/pop_share_song_btn"
        android:textSize="@dimen/normal_font"
        android:textColor="@color/colorWhite"
        />
    <Button
        android:id="@+id/pop_delete_song_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:text="@string/pop_delete_song_btn"
        android:textSize="@dimen/normal_font"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>