<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddPlaylistFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/add_playlist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edit"
            android:hint="@string/add_playlist_title"
            android:textSize="24sp"
            android:singleLine="true" />
        <EditText
            android:id="@+id/add_playlist_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edit"
            android:hint="@string/add_playlist_intro"
            android:textSize="24sp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/add_playlist_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edit"
            android:hint="@string/add_playlist_pic"
            android:textSize="24sp"
            android:singleLine="true" />
        <ImageView
            android:id="@+id/add_playlist_iv"
            android:src="@drawable/no_data"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <Button
            android:id="@+id/add_select_pic_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_btn"
            android:text="选 择 图 片"
            android:textSize="24sp" />
        <!--新建按钮-->
        <Button
            android:id="@+id/add_playlist_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_btn"
            android:text="新 键 歌 单"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>